RESOLVED FIXED254917
[WPE][Debug] ASSERTION FAILED: !m_compositingAccordingToProxyMessages
https://bugs.webkit.org/show_bug.cgi?id=254917
Summary [WPE][Debug] ASSERTION FAILED: !m_compositingAccordingToProxyMessages
Vitaly Dyackhov
Reported 2023-04-03 07:25:46 PDT
I've noticed a lot of crashes on WPE in Debug mode after 262317@main: ``` Thread 1 (Thread 0x7f3669ea39c0 (LWP 2482)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 #1 0x00007f367a9f2769 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Assertions.h:758 #2 0x00007f367c202351 in WebKit::DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers() (this=0x7f36600f0220) at /app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:388 #3 0x00007f367c204c4a in WebKit::LayerTreeHost::layerFlushTimerFired() (this=0x7f36601105a0) at /app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:170 #4 0x00007f367c22847a in std::__invoke_impl<void, void (WebKit::LayerTreeHost::*&)(), WebKit::LayerTreeHost*&>(std::__invoke_memfun_deref, void (WebKit::LayerTreeHost::*&)(), WebKit::LayerTreeHost*&) (__f=@0x7f366017da48: (void (WebKit::LayerTreeHost::*)(WebKit::LayerTreeHost * const)) 0x7f367c204b50 <WebKit::LayerTreeHost::layerFlushTimerFired()>, __t=@0x7f366017da58: 0x7f36601105a0) at /usr/include/c++/12.2.0/bits/invoke.h:74 #5 0x00007f367c228379 in std::__invoke<void (WebKit::LayerTreeHost::*&)(), WebKit::LayerTreeHost*&>(void (WebKit::LayerTreeHost::*&)(), WebKit::LayerTreeHost*&) (__fn=@0x7f366017da48: (void (WebKit::LayerTreeHost::*)(WebKit::LayerTreeHost * const)) 0x7f367c204b50 <WebKit::LayerTreeHost::layerFlushTimerFired()>) at /usr/include/c++/12.2.0/bits/invoke.h:96 #6 0x00007f367c228245 in std::_Bind<void (WebKit::LayerTreeHost::*(WebKit::LayerTreeHost*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f366017da48, __args=...) at /usr/include/c++/12.2.0/functional:484 #7 0x00007f367c22812f in std::_Bind<void (WebKit::LayerTreeHost::*(WebKit::LayerTreeHost*))()>::operator()<, void>() (this=0x7f366017da48) at /usr/include/c++/12.2.0/functional:567 #8 0x00007f367c2280d8 in WTF::Detail::CallableWrapper<std::_Bind<void (WebKit::LayerTreeHost::*(WebKit::LayerTreeHost*))()>, void>::call() (this=0x7f366017da40) at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Function.h:53 #9 0x00007f367b28ef19 in WTF::Function<void ()>::operator()() const (this=0x7f3660110698) at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Function.h:82 #10 0x00007f367b394918 in WTF::RunLoop::Timer::fired() (this=0x7f3660110670) at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/RunLoop.h:195 #11 0x00007f367e641e6f in operator()(gpointer) const (__closure=0x0, userData=0x7f3660110670) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:177 #12 0x00007f367e641eaf in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:181 #13 0x00007f367e6413c1 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x55da656ed360, callback=0x7f367e641e92 <_FUN(gpointer)>, userData=0x7f3660110670) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #14 0x00007f367e64140f in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #15 0x00007f36708e2c37 in g_main_dispatch (context=0x55da65382b50) at ../glib/gmain.c:3419 #16 g_main_context_dispatch (context=0x55da65382b50) at ../glib/gmain.c:4137 #17 0x00007f3670939028 in g_main_context_iterate.constprop.0 (context=0x55da65382b50, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4213 #18 0x00007f36708e22af in g_main_loop_run (loop=0x55da65383d00) at ../glib/gmain.c:4413 #19 0x00007f367e641a7a in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #20 0x00007f367c22cef5 in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7ffd2aa7e0d0, argc=4, argv=0x7ffd2aa7e298) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:71 #21 0x00007f367c22b5df in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7ffd2aa7e298) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:97 #22 0x00007f367c229187 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7ffd2aa7e298) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:75 #23 0x000055da638198d9 in main(int, char**) (argc=4, argv=0x7ffd2aa7e298) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31 ```
Attachments
Vitaly Dyackhov
Comment 1 2023-04-03 07:29:29 PDT
EWS
Comment 2 2023-04-04 01:02:02 PDT
Committed 262572@main (42d171124def): <https://commits.webkit.org/262572@main> Reviewed commits have been landed. Closing PR #12318 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.