Cherry-pick 262572@main (42d171124def). https://bugs.webkit.org/show_bug.cgi?id=254917

[WPE][Debug] ASSERTION FAILED: !m_compositingAccordingToProxyMessages
    https://bugs.webkit.org/show_bug.cgi?id=254917

    Reviewed by Žan Doberšek.

    Since 262317@main, we send EnterAcceleratedCompositingMode as soon as
    web process enters accelerated compositing mode. We must not send it
    again after backing store update.

    * Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
    (WebKit::DrawingAreaCoordinatedGraphics::layerHostDidFlushLayers):

    Canonical link: https://commits.webkit.org/262572@main